# ft-api-scripts

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
srcs/: campus.py  events.py  scale_teams.py  user_scale_teams.py
srcs/api/: __init__.py  ft_api_client.py
srcs/campus/: count_campus.py  dump_campus.py  visualize_campus.py
srcs/scale_teams/: count_scale_teams.py  dump_scale_teams.py  visualize_scale_teams.py
srcs/user_scale_teams/: count_user_scale_teams.py  dump_user_scale_teams.py
srcs/utils/: file_io.py
