[tool.poetry]
name = "ft-api-scripts"
version = "0.1.0"
description = ""
authors = ["nafuka11"]

[tool.poetry.dependencies]
python = "^3.8"
FtApi = "^2.2.3"
matplotlib = "^3.5.0"
python-dotenv = "^0.19.2"
pandas = "^1.3.5"
rich = "^10.16.1"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.920"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
